--- a/modphil.html
+++ b/modphil.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 
-<title>THE BUFFALO IS BORN</title>
+<title>Project: Modern Philosophy in plain text</title>
 
 <meta name="viewport" content="width=device-width" />
-<meta name="description" content="Where the wild buffalo are" />
-<meta name="keywords" content="buffalo, buffalo, buffalo, buffalo, buffalo" />
+<meta name="description" content="Alex Dunn is a PhD student at UCSB" />
+<meta name="author" content="Alex Dunn" />
 
 <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
