--- a/w14.html
+++ b/w14.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>Website: UCSB Philosophy</title>
+<title>Philosophy 1 (Winter 2014)</title>
 
 <meta name="viewport" content="width=device-width" />
 <meta name="description" content="Alex Dunn is a PhD student at UCSB" />
@@ -18,9 +18,16 @@
 <body>
 
 <header role="banner">
-<h1>Website: <a href="http://www.philosophy.ucsb.edu">UCSB Philosophy</a></h1>
+<h1>Philosophy 1 (Winter 2014)</h1>
 </header>
 
 <article role="article">
-<p>The University of California, Santa Barbara has a Philosophy department, and the Philosophy department has a website. In my capacity as graduate student/web aficionado, I rewrote the website from the ground up, making it vastly more responsive and accessible.</p>
+<p>Here are the handouts for my Philosophy 1 sections:</p>
+<ul>
+<li><p><a href="docs/dreaming.html">What’s the Dreaming Hypothesis, and why can’t we rule it out?</a></p></li>
+<li><p><a href="docs/god.html">The Trademark Argument for the Existence of God</a></p></li>
+<li><p><a href="docs/zombies.html">Zombies!</a></p></li>
+<li><p><a href="docs/identity.html">Persons and Person-stages</a></p></li>
+</ul>
+<p>This page will be updated as more are added.</p>
 <footer><p>
