--- a/archive.html
+++ b/archive.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Archive</title>
+  <title>Archive — alexdunn.info</title>
 
   <meta name="viewport" content="width=device-width" />
-  <meta name="description" content="an archive idk" />
-  <meta name="keywords" content="archive" />
+  <meta name="description" content="Alex Dunn is a PhD student at UCSB" />
+  <meta name="author" content="Alex Dunn" />
 
   <link href="stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
   <link href="stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
@@ -19,12 +19,14 @@
 <header role="banner">
 <hgroup>
 <h1>Archive</h1>
-<h2>This is an archive.</h2>
 </hgroup>
 </header>
 
 <ul>
 
+<li>
+<p>Philosophy 1 (Winter 2014) (<a href="w14.html">2014-03-03</a>)</p>
+</li>
 <li>
 <p>Website: <a href="http://www.philosophy.ucsb.edu">UCSB Philosophy</a> (<a href="ucsb.html">2014-01-26</a>)</p>
 </li>
@@ -34,7 +36,14 @@
 </ul>
 
 <footer role="contentinfo">
-<p>That's all.  Now get back to the <a href="index.html">main page</a>.</p>
+	<p>Email me at <script type="text/javascript">
+	<!--
+	h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x75;&#110;&#110;&#46;&#x61;&#108;&#x65;&#120;';e=n+a+h;
+	document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
+	// -->
+	</script><noscript>&#100;&#x75;&#110;&#110;&#46;&#x61;&#108;&#x65;&#120;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript>. I have a <a href="docs/cv.html">CV</a> and a <a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>. This website is hosted on <a href="http://grumble.github.com/alexdunn.info/">GitHub</a>.</p>
+	
+	<p>All content is available in the <a href="archive.html">archive</a>.</p>
 </footer>
 
 </body>
