--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <header>
 <h2>Philosophy 1 (Winter 2014)</h2>
 </header>
-<p>Here are the handouts for my Philosophy 1 sections:</p>
+<p><strong>Office Hours:</strong> 11:30AM–1:30PM in South Hall 5706</p>
+<p>Here are the handouts for my sections:</p>
 <ul>
 <li><p><a href="docs/dreaming.html">What’s the Dreaming Hypothesis, and why can’t we rule it out?</a></p></li>
 <li><p><a href="docs/god.html">The Trademark Argument for the Existence of God</a></p></li>
