add locke handout to w14

--- a/w14.html
+++ b/w14.html
@@ -29,6 +29,7 @@
 <li><p><a href="docs/god.html">The Trademark Argument for the Existence of God</a></p></li>
 <li><p><a href="docs/zombies.html">Zombies!</a></p></li>
 <li><p><a href="docs/identity.html">Persons and Person-stages</a></p></li>
+<li><p><a href="docs/locke.html">Is psychological continuity what matters for personal identity?</a></p></li>
 </ul>
 <p>This page will be updated as more are added.</p>
 <footer><p>
