--- a/w14.html
+++ b/w14.html
@@ -22,7 +22,7 @@
 </header>
 
 <article role="article">
-<p><strong>Office Hours:</strong> 11:30AM–1:30PM in South Hall 5706</p>
+<p><strong>Office Hours:</strong> Thursday 11:30AM–1:30PM in South Hall 5706</p>
 <p>Here are the handouts for my sections:</p>
 <ul>
 <li><p><a href="docs/dreaming.html">What’s the Dreaming Hypothesis, and why can’t we rule it out?</a></p></li>
