--- a/archive.html
+++ b/archive.html
@@ -25,6 +25,9 @@
 
 <ul>
 <li>
+<p>Philosophy 1 (Spring 2014) (<a href="s14.html">2014-03-29</a>)</p>
+</li>
+<li>
 <p>Philosophy 1 (Winter 2014) (<a href="w14.html">2014-03-03</a>)</p>
 </li>
 <li>
