--- a/archive.html
+++ b/archive.html
@@ -34,6 +34,9 @@
 <p>Website: <a href="http://www.philosophy.ucsb.edu">UCSB Philosophy</a> (<a href="ucsb.html">2014-01-26</a>)</p>
 </li>
 <li>
+<p>Campus Resources (<a href="resources.html">2014-01-01</a>)</p>
+</li>
+<li>
 <p>Project: <a href="modernphilosophy/text.html" title="HTML version of Modern Philosophy"><em>Modern Philosophy</em> in plain text</a> (<a href="modphil.html">2012-05-28</a>)</p>
 </li>
 </ul>
