modus ponens handout
and listing on the main page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <header>
 <h2>Philosophy 1 (Spring 2014)</h2>
 </header>
+<h3 id="handouts">Handouts</h3>
+<ul>
+<li><p><a href="docs/prometheus.html">The Prometheus Problem</a></p></li>
+<li><p><a href="docs/modus.html">One person’s <em>modus ponens</em> is another’s <em>modus tollens</em></a></p></li>
+</ul>
 <h3 id="sections">Sections</h3>
 <ul>
 <li><p>Wednesday 1:00–1:50PM: Girvetz Hall, Room 2115</p></li>
