--- a/s14.html
+++ b/s14.html
@@ -22,6 +22,11 @@
 </header>
 
 <article role="article">
+<h3 id="handouts">Handouts</h3>
+<ul>
+<li><p><a href="docs/prometheus.html">The Prometheus Problem</a></p></li>
+<li><p><a href="docs/modus.html">One person’s <em>modus ponens</em> is another’s <em>modus tollens</em></a></p></li>
+</ul>
 <h3 id="sections">Sections</h3>
 <ul>
 <li><p>Wednesday 1:00–1:50PM: Girvetz Hall, Room 2115</p></li>
