--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 // -->
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>. I have a <a href="docs/cv.html">CV</a> and a <a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>. This website is hosted on <a href="http://github.com/grumble/alexdunn/">GitHub</a>.</p>
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>. I have a <a href="docs/cv.html">CV</a> and a <a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>.</p>
 
 	<p>All content is available in the <a href="archive.html">archive</a>.</p>
 </footer>
