updated links to handouts

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <ul>
 <li><p><a href="docs/prometheus.html">The Prometheus Problem</a></p></li>
 <li><p><a href="docs/modus.html">One person’s <em>modus ponens</em> is another’s <em>modus tollens</em></a></p></li>
+<li><p><a href="docs/moore.html">Skepticism and common sense</a></p></li>
+<li><p><a href="docs/transmission/index.html">The Transmissibility Argument</a></p></li>
 </ul>
 <h3 id="sections">Sections</h3>
 <ul>
