--- a/handouts/index.html
+++ b/handouts/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	<link href="http://alexdunn.info/handouts/index.xml" rel="alternate" type="application/rss+xml" title="Handouts" />
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -120,9 +125,7 @@ intelligent designer for some purpose.</p></li>
 <header>
 <h3><a href="http://alexdunn.info/handouts/locke">Is psychological continuity what matters for personal identity?</a></h3>
 </header>
-<p><h3>Definitions</h3>
-
-<p>If you accept the <em>Revised</em> Lockean Theory of personal identity, this
+<p><p>If you accept the <em>Revised</em> Lockean Theory of personal identity, this
 is what you mean by &ldquo;psychological continuity&rdquo;:</p>
 
 <p>Psychological continuity
@@ -154,12 +157,7 @@ the Dreaming Hypothesis?</p>
 <header>
 <h3><a href="http://alexdunn.info/handouts/identity">Persons and Person-stages</a></h3>
 </header>
-<p><h3>What are person-stages and why should we care?</h3>
-
-<p>The philosopher Ted Sider has a good explanation of what we&rsquo;re talking
-about with &ldquo;person-stages&rdquo;:</p>
-
-<blockquote>
+<p><blockquote>
 <p>Think of your life as a long story. Let the story be a rather
 narcissistic story: cut out all details about everything else except
 you. So the story begins with an infant (or perhaps a fetus). It
@@ -170,13 +168,6 @@ stories, this story has parts. We can distinguish the part of the
 story concerning childhood from the part concerning adulthood. Given
 enough details, there will be parts concerning individual days,
 minutes, or even instants.</p>
-
-<p>[There&rsquo;s a sense in which] persons are a lot like their
-stories. Just as my story has a part for my childhood, so I have a
-part consisting just of my childhood. Just as my story has a part
-describing just this instant, so I have a part that is
-me-at-this-very-instant (from page 1 of his book
-<em>Four-Dimensionalism</em>).</p>
 </blockquote>
 </p>
 
@@ -186,10 +177,8 @@ me-at-this-very-instant (from page 1 of his book
 <header>
 <h3><a href="http://alexdunn.info/handouts/zombies">Zombies!</a></h3>
 </header>
-<p><h3>These zombies only eat brains if we do</h3>
-
-<p>So a zombie is something that&rsquo;s physically indistinguishable from a
-human but has no <em>mental states</em>.</p>
+<p><p>A zombie, in the philosophical sense, is something that&rsquo;s physically
+indistinguishable from a human but has no <em>mental states</em>.</p>
 
 <p>Other, maybe less precise ways of getting at this, would be to say
 that zombies are not <em>conscious</em>, or that there&rsquo;s <em>nothing going on up
@@ -203,9 +192,7 @@ there, but no consciousness.)</p>
 <header>
 <h3><a href="http://alexdunn.info/handouts/god">The Trademark Argument for the Existence of God</a></h3>
 </header>
-<p><h3>Part 1: The No-Something-From-Nothing Principle</h3>
-
-<p>Descartes claims that &ldquo;there must be at least as much in the cause as
+<p><p>Descartes claims that &ldquo;there must be at least as much in the cause as
 in the effect of that cause.&rdquo;  His examples in the third <em>Meditation</em>
 include the following:</p>
 
