--- a/courses/f13/index.html
+++ b/courses/f13/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,7 +41,13 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single courses">
-<h2>Philosophy 4: Intro to Ethics</h2>
+<h2>Philosophy 4: Intro to Ethics
+	
+	
+	 (F13)
+	
+	
+</h2>
 
 
 <h3 id="toc_0">Sections</h3>
