--- a/handouts/god/index.html
+++ b/handouts/god/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,10 +41,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single handouts">
-<h2>The Trademark Argument for the Existence of God</h2>
+<h2>The Trademark Argument for the Existence of God
+	
+	
+	 (W14)
+	
+	
+</h2>
 
-
-<h3 id="toc_0">Part 1: The No-Something-From-Nothing Principle</h3>
 
 <p>Descartes claims that &ldquo;there must be at least as much in the cause as
 in the effect of that cause.&rdquo;  His examples in the third <em>Meditation</em>
@@ -53,7 +62,9 @@ which contains everything to be found in the stone.&rdquo;</p></li>
 least the same degree or kind of perfection as heat.&rdquo;</p></li>
 </ul>
 
-<p>These examples make some sense: to produce sedimentary rock, you need
+<h3 id="toc_0">The No-Something-From-Nothing Principle</h3>
+
+<p>The examples above make some sense: to produce sedimentary rock, you need
 at least as much sediment as ends up in the rock; to produce heat, you
 need at least as much energy as corresponds to the heat produced.
 Otherwise you would be creating something from nothing, which
@@ -73,7 +84,7 @@ perfection cannot.  It needs a perfect source.</p>
 
 <p>Do I have such an idea?</p>
 
-<h3 id="toc_1">Part 2: The Perfect Idea</h3>
+<h3 id="toc_1">The Perfect Idea</h3>
 
 <blockquote>
 <p>How could I understand that I &hellip; lacked something &hellip; that I was
