--- a/handouts/identity/index.html
+++ b/handouts/identity/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,13 +41,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single handouts">
-<h2>Persons and Person-stages</h2>
+<h2>Persons and Person-stages
+	
+	
+	 (W14)
+	
+	
+</h2>
 
-
-<h3 id="toc_0">What are person-stages and why should we care?</h3>
-
-<p>The philosopher Ted Sider has a good explanation of what we&rsquo;re talking
-about with &ldquo;person-stages&rdquo;:</p>
 
 <blockquote>
 <p>Think of your life as a long story. Let the story be a rather
@@ -60,19 +66,18 @@ minutes, or even instants.</p>
 stories. Just as my story has a part for my childhood, so I have a
 part consisting just of my childhood. Just as my story has a part
 describing just this instant, so I have a part that is
-me-at-this-very-instant (from page 1 of his book
+me-at-this-very-instant (from page 1 of his Ted Sider&rsquo;s
 <em>Four-Dimensionalism</em>).</p>
 </blockquote>
 
-<p>What he&rsquo;s referring to with his talk of &ldquo;parts&rdquo; is what we&rsquo;re
-referring to with our talk of &ldquo;person-stages.&rdquo;</p>
-
-<p>(&ldquo;Parts&rdquo; might seem a lot more natural, but when we talk about the
-parts of a person we&rsquo;re usually talking about their <em>spatial</em>
-parts&mdash;my legs, my arms, my head.  But right now we&rsquo;re interested in
+<p>This is a pretty good explanation of what <em>person-stages</em> are. Sider
+uses &ldquo;parts&rdquo; instead of &ldquo;person-stages&rdquo;, but he&rsquo;s talking about the
+same thing. &ldquo;Parts&rdquo; might seem a lot more natural, but when we talk
+about the parts of a person we&rsquo;re usually talking about their <em>spatial</em>
+parts&mdash;my legs, my arms, my head. But right now we&rsquo;re interested in
 <em>temporal</em> parts&mdash;my childhood, my teenage years, my 20s.
 &ldquo;Person-stages&rdquo; makes it clear that we&rsquo;re not talking about legs and
-arms and heads.)</p>
+arms and heads.</p>
 
 <p>So the idea is that a person is a collection of person-stages.  We are
 the sum of our (temporal) parts.</p>
@@ -87,7 +92,7 @@ But <em>why?</em> What <em>makes it true</em> that a child in the 1990s and a
 20-something now are parts of the same story&mdash;parts of the same
 <em>person?</em></p>
 
-<h3 id="toc_1">The Prince and the Cobbler</h3>
+<h3 id="toc_0">The Prince and the Cobbler</h3>
 
 <p>Here&rsquo;s a more elaborate version of the story of the Prince and the
 Cobbler:</p>
