--- a/handouts/locke/index.html
+++ b/handouts/locke/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,10 +41,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single handouts">
-<h2>Is psychological continuity what matters for personal identity?</h2>
+<h2>Is psychological continuity what matters for personal identity?
+	
+	
+	 (W14)
+	
+	
+</h2>
 
-
-<h3 id="toc_0">Definitions</h3>
 
 <p>If you accept the <em>Revised</em> Lockean Theory of personal identity, this
 is what you mean by &ldquo;psychological continuity&rdquo;:</p>
@@ -67,7 +76,7 @@ clause (2) to explain why they are nonetheless co-personal.  The old
 general is connected to the little boy by a chain of psychologically
 continuous person-stages (including the brave officer).</p>
 
-<h3 id="toc_1">Teleportation and Duplication</h3>
+<h3 id="toc_0">Teleportation and Duplication</h3>
 
 <p>But now teleportation and duplication are supposed to cause problems
 for this Revised Lockean Theory.</p>
