--- a/handouts/zombies/index.html
+++ b/handouts/zombies/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,13 +41,17 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single handouts">
-<h2>Zombies!</h2>
+<h2>Zombies!
+	
+	
+	 (W14)
+	
+	
+</h2>
 
 
-<h3 id="toc_0">These zombies only eat brains if we do</h3>
-
-<p>So a zombie is something that&rsquo;s physically indistinguishable from a
-human but has no <em>mental states</em>.</p>
+<p>A zombie, in the philosophical sense, is something that&rsquo;s physically
+indistinguishable from a human but has no <em>mental states</em>.</p>
 
 <p>Other, maybe less precise ways of getting at this, would be to say
 that zombies are not <em>conscious</em>, or that there&rsquo;s <em>nothing going on up
@@ -73,7 +82,7 @@ can utter things like &ldquo;I remember sliding down that hill as a child&rdquo;
 when they&rsquo;re in a situation that would make a human remember sliding
 down that hill as a child.</p>
 
-<h3 id="toc_1">How could this be???</h3>
+<h3 id="toc_0">How could this be???</h3>
 
 <p>Now the question is, are zombies even <em>possible?</em>  You might think
 that they&rsquo;re not.  You might think that</p>
@@ -116,7 +125,7 @@ that zombies both do and do not have mental states.  &ldquo;Zombies exist&rdquo;
 is therefore <em>logically impossible</em>, just as impossible as &ldquo;Round
 squares exist.&rdquo;</p>
 
-<h3 id="toc_2">NOT SO FAST</h3>
+<h3 id="toc_1">NOT SO FAST</h3>
 
 <p>This is not a valid argument.</p>
 
