--- a/projects/exists.js/index.html
+++ b/projects/exists.js/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,7 +41,9 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single projects">
-<h2>Exists.js</h2>
+<h2>Exists.js
+	
+</h2>
 <p>Exists.js is a silly tool to generate symbolic representations of existence statements, such as &ldquo;at least five things exist&rdquo;, &ldquo;exactly two things exist&rdquo;, and &ldquo;at most nine things exist&rdquo;.</p>
 
 <p>If you&rsquo;re a scumbag analytic philosopher like me then this might actually
