--- a/projects/modphil/index.html
+++ b/projects/modphil/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -36,7 +41,9 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 <main id="content-start" role="main">
 
 <section class="single projects">
-<h2><em>Modern Philosophy</em> in plain text</h2>
+<h2><em>Modern Philosophy</em> in plain text
+	
+</h2>
 <p><em>Modern Philosophy</em> is a free textbook created by
 <a href="https://filebox.vt.edu/users/ottw/ott.htm" title="Walter Ott's
 personal site">Walter Ott</a>. It combines public-domain primary sources with
