--- a/quarters/w14/index.html
+++ b/quarters/w14/index.html
@@ -11,12 +11,17 @@
 
   	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 		
 	<link href="http://alexdunn.info/quarters/w14/index.xml" rel="alternate" type="application/rss+xml" title="W14" />
 
 </head>
 <body>
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
 <header class="page-header" role="banner">
 <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
 <ul class="top">
@@ -47,8 +52,6 @@ Is psychological continuity what matters for personal identity?
 </header>
 
 
-<h3 id="toc_0">Definitions</h3>
-
 <p>If you accept the <em>Revised</em> Lockean Theory of personal identity, this
 is what you mean by &ldquo;psychological continuity&rdquo;:</p>
 
@@ -75,7 +78,7 @@ clause (2) to explain why they are nonetheless co-personal.  The old
 general is connected to the little boy by a chain of psychologically
 continuous person-stages (including the brave officer).</p>
 
-<h3 id="toc_1">Teleportation and Duplication</h3>
+<h3 id="toc_0">Teleportation and Duplication</h3>
 
 <p>But now teleportation and duplication are supposed to cause problems
 for this Revised Lockean Theory.</p>
@@ -275,11 +278,6 @@ Persons and Person-stages
 </header>
 
 
-<h3 id="toc_0">What are person-stages and why should we care?</h3>
-
-<p>The philosopher Ted Sider has a good explanation of what we&rsquo;re talking
-about with &ldquo;person-stages&rdquo;:</p>
-
 <blockquote>
 <p>Think of your life as a long story. Let the story be a rather
 narcissistic story: cut out all details about everything else except
@@ -296,19 +294,18 @@ minutes, or even instants.</p>
 stories. Just as my story has a part for my childhood, so I have a
 part consisting just of my childhood. Just as my story has a part
 describing just this instant, so I have a part that is
-me-at-this-very-instant (from page 1 of his book
+me-at-this-very-instant (from page 1 of his Ted Sider&rsquo;s
 <em>Four-Dimensionalism</em>).</p>
 </blockquote>
 
-<p>What he&rsquo;s referring to with his talk of &ldquo;parts&rdquo; is what we&rsquo;re
-referring to with our talk of &ldquo;person-stages.&rdquo;</p>
-
-<p>(&ldquo;Parts&rdquo; might seem a lot more natural, but when we talk about the
-parts of a person we&rsquo;re usually talking about their <em>spatial</em>
-parts&mdash;my legs, my arms, my head.  But right now we&rsquo;re interested in
+<p>This is a pretty good explanation of what <em>person-stages</em> are. Sider
+uses &ldquo;parts&rdquo; instead of &ldquo;person-stages&rdquo;, but he&rsquo;s talking about the
+same thing. &ldquo;Parts&rdquo; might seem a lot more natural, but when we talk
+about the parts of a person we&rsquo;re usually talking about their <em>spatial</em>
+parts&mdash;my legs, my arms, my head. But right now we&rsquo;re interested in
 <em>temporal</em> parts&mdash;my childhood, my teenage years, my 20s.
 &ldquo;Person-stages&rdquo; makes it clear that we&rsquo;re not talking about legs and
-arms and heads.)</p>
+arms and heads.</p>
 
 <p>So the idea is that a person is a collection of person-stages.  We are
 the sum of our (temporal) parts.</p>
@@ -323,7 +320,7 @@ But <em>why?</em> What <em>makes it true</em> that a child in the 1990s and a
 20-something now are parts of the same story&mdash;parts of the same
 <em>person?</em></p>
 
-<h3 id="toc_1">The Prince and the Cobbler</h3>
+<h3 id="toc_0">The Prince and the Cobbler</h3>
 
 <p>Here&rsquo;s a more elaborate version of the story of the Prince and the
 Cobbler:</p>
@@ -383,10 +380,8 @@ Zombies!
 </header>
 
 
-<h3 id="toc_0">These zombies only eat brains if we do</h3>
-
-<p>So a zombie is something that&rsquo;s physically indistinguishable from a
-human but has no <em>mental states</em>.</p>
+<p>A zombie, in the philosophical sense, is something that&rsquo;s physically
+indistinguishable from a human but has no <em>mental states</em>.</p>
 
 <p>Other, maybe less precise ways of getting at this, would be to say
 that zombies are not <em>conscious</em>, or that there&rsquo;s <em>nothing going on up
@@ -417,7 +412,7 @@ can utter things like &ldquo;I remember sliding down that hill as a child&rdquo;
 when they&rsquo;re in a situation that would make a human remember sliding
 down that hill as a child.</p>
 
-<h3 id="toc_1">How could this be???</h3>
+<h3 id="toc_0">How could this be???</h3>
 
 <p>Now the question is, are zombies even <em>possible?</em>  You might think
 that they&rsquo;re not.  You might think that</p>
@@ -460,7 +455,7 @@ that zombies both do and do not have mental states.  &ldquo;Zombies exist&rdquo;
 is therefore <em>logically impossible</em>, just as impossible as &ldquo;Round
 squares exist.&rdquo;</p>
 
-<h3 id="toc_2">NOT SO FAST</h3>
+<h3 id="toc_1">NOT SO FAST</h3>
 
 <p>This is not a valid argument.</p>
 
@@ -496,8 +491,6 @@ The Trademark Argument for the Existence of God
 </header>
 
 
-<h3 id="toc_0">Part 1: The No-Something-From-Nothing Principle</h3>
-
 <p>Descartes claims that &ldquo;there must be at least as much in the cause as
 in the effect of that cause.&rdquo;  His examples in the third <em>Meditation</em>
 include the following:</p>
@@ -510,7 +503,9 @@ which contains everything to be found in the stone.&rdquo;</p></li>
 least the same degree or kind of perfection as heat.&rdquo;</p></li>
 </ul>
 
-<p>These examples make some sense: to produce sedimentary rock, you need
+<h3 id="toc_0">The No-Something-From-Nothing Principle</h3>
+
+<p>The examples above make some sense: to produce sedimentary rock, you need
 at least as much sediment as ends up in the rock; to produce heat, you
 need at least as much energy as corresponds to the heat produced.
 Otherwise you would be creating something from nothing, which
@@ -530,7 +525,7 @@ perfection cannot.  It needs a perfect source.</p>
 
 <p>Do I have such an idea?</p>
 
-<h3 id="toc_1">Part 2: The Perfect Idea</h3>
+<h3 id="toc_1">The Perfect Idea</h3>
 
 <blockquote>
 <p>How could I understand that I &hellip; lacked something &hellip; that I was
