brosehappy and link to hp philosophy

--- a/handouts/modus/index.html
+++ b/handouts/modus/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>One person&#8217;s &lt;em&gt;modus ponens&lt;/em&gt; is another&#8217;s &lt;em&gt;modus tollens&lt;/em&gt; — alexdunn.info</title>
 
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Alex Dunn is a PhD student at UCSB" />
 <meta name="author" content="Alex Dunn" />
 <meta name="keywords" content="ucsb, philosophy" />
@@ -19,6 +20,7 @@
 
 </head>
 <body>
+
 
 <p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
 
