--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Alex Dunn — alexdunn.info</title>
 
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Alex Dunn is a PhD student at UCSB" />
 <meta name="author" content="Alex Dunn" />
 <meta name="keywords" content="ucsb, philosophy" />
@@ -19,6 +20,7 @@
 
 </head>
 <body>
+
 
 <p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
 
@@ -46,6 +48,8 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
 <h2>Course pages</h2>
 <ul class="courses-list">
+
+
 
 
 
@@ -109,6 +113,13 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
 
 
+<h3 class="project-header"><a href="http://baruffio.com/t/philosophy/"><em>Harry Potter</em> and philosophy</a></h3>
+</header>
+<p>I wasn&rsquo;t invited to contribute to the &ldquo;Ultimate&rdquo; <a href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470398256.html"><em>Harry Potter</em> and Philosophy</a> book, but I&rsquo;ve written a few introductions to philosophical ideas (time travel, philosophy of names) using <em>Harry Potter</em> as a jumping-off point. Comments are always appreciated!</p>
+
+
+
+
 
 
 
@@ -160,9 +171,6 @@ conversion to other file formats.  Using
 <a href="http://johnmacfarlane.net/pandoc/" title="pandoc project page">pandoc</a>,
 <em>Modern Philosophy</em> can be easily converted to HTML, PDF, EPUB, and
 <a href="http://johnmacfarlane.net/pandoc/README.html#options" title="pandoc options">many other formats</a>.</p>
-
-<p>This version of <em>Modern Philosophy</em> is kept in a
-<a href="https://github.com/grumble/modernphilosophy" title="GitHub repository">public repository on GitHub</a>.</p>
 
 
 
