--- a/projects/index.html
+++ b/projects/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Projects — alexdunn.info</title>
 
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Alex Dunn is a PhD student at UCSB" />
 <meta name="author" content="Alex Dunn" />
 <meta name="keywords" content="ucsb, philosophy" />
@@ -19,6 +20,7 @@
 
 </head>
 <body>
+
 
 <p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
 
@@ -42,6 +44,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
 <section class="single">
 <h2>All projects</h2>
+
+	<article class="posts" role="article">
+<header>
+<h3><a href="http://alexdunn.info/projects/harrypotter"><em>Harry Potter</em> and philosophy</a></h3>
+</header>
+<p>I wasn&rsquo;t invited to contribute to the &ldquo;Ultimate&rdquo; Harry Potter and Philosophy book, but I&rsquo;ve written a few introductions to philosophical ideas (time travel, philosophy of names) using Harry Potter as a jumping-off point. Comments are always appreciated!</p>
+
+</article>
 
 	<article class="posts" role="article">
 <header>
