--- a/exists/index.html
+++ b/exists/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>∃.js</title>
 
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="there exists a js" />
 
   <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" media="screen" />
