--- a/projects/modphil/index.html
+++ b/projects/modphil/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>&lt;em&gt;Modern Philosophy&lt;/em&gt; in plain text — alexdunn.info</title>
 
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Alex Dunn is a PhD student at UCSB" />
 <meta name="author" content="Alex Dunn" />
 <meta name="keywords" content="ucsb, philosophy" />
@@ -19,6 +20,7 @@
 
 </head>
 <body>
+
 
 <p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
 
@@ -58,9 +60,6 @@ conversion to other file formats.  Using
 <a href="http://johnmacfarlane.net/pandoc/" title="pandoc project page">pandoc</a>,
 <em>Modern Philosophy</em> can be easily converted to HTML, PDF, EPUB, and
 <a href="http://johnmacfarlane.net/pandoc/README.html#options" title="pandoc options">many other formats</a>.</p>
-
-<p>This version of <em>Modern Philosophy</em> is kept in a
-<a href="https://github.com/grumble/modernphilosophy" title="GitHub repository">public repository on GitHub</a>.</p>
 
 </section>
 
