rm bylines, header padding, minify

--- a/exists/index.html
+++ b/exists/index.html
@@ -1,51 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>∃.js</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="there exists a js" />
-
-  <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" media="screen" />
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-</head>
-<body>
-
-<header>
-<h1><span class="logic exists">∃</span>.js</h1>
-</header>
-
-<main role="main">
-
-  <form>
-    <label for="mode">Generate the symbolic representation of the
-    existence of</label>
-    <select name="mode" id="mode">
-      <option value="at-least">at least</option>
-      <option value="at-most">at most</option>
-      <option value="exactly">exactly</option>
-    </select>
-    <input type="number" name="things" id="things" min="1" step="1"
-    value="1" />
-    <label for="number">things</label>
-  </form>
-
-<p id="result"><span class="logic exists">∃</span>a</p>
-
-</main>
-
-<footer role="contentinfo">
-
-<p>Written by <a href="http://alexdunn.info" title="Ale Dunn">Alex Dunn</a>.
-  The code's
-    <a href="https://github.com/grumble/exists.js/blob/master/scripts/exists.js" title="exist.js
-    repository">on GitHub</a> if you want a laugh.</p>
-
-</footer>
-
-<script type="text/javascript" src="scripts/min-exists.js"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <title>∃.js</title> <meta name="viewport" content="width=device-width, initial-scale=1"/> <meta name="description" content="there exists a js"/> <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" media="screen"/> <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--> </head> <body> <header> <h1><span class="logic exists">∃</span>.js</h1> </header> <main role="main"> <form> <label for="mode">Generate the symbolic representation of the existence of</label> <select name="mode" id="mode"> <option value="at-least">at least</option> <option value="at-most">at most</option> <option value="exactly">exactly</option> </select> <input type="number" name="things" id="things" min="1" step="1" value="1"/> <label for="number">things</label> </form> <p id="result"><span class="logic exists">∃</span>a</p> </main> <footer role="contentinfo"> <p>Written by <a href="http://alexdunn.info" title="Ale Dunn">Alex Dunn</a>. The code's <a href="https://github.com/grumble/exists.js/blob/master/scripts/exists.js" title="exist.js repository">on GitHub</a> if you want a laugh.</p> </footer> <script type="text/javascript" src="scripts/min-exists.js"></script> </body> </html>
