--- a/handouts/index.html
+++ b/handouts/index.html
@@ -1,235 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Handouts — alexdunn.info</title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Alex Dunn is a PhD student at UCSB" />
-<meta name="author" content="Alex Dunn" />
-<meta name="keywords" content="ucsb, philosophy" />
-
-  	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
-	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-		
-	<link href="http://alexdunn.info/handouts/index.xml" rel="alternate" type="application/rss+xml" title="Handouts" />
-
-</head>
-<body>
-
-
-<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
-
-<header class="page-header" role="banner">
-<h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
-<ul class="top">
-<li class="top"><script type="text/javascript">
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>Handouts — alexdunn.info</title> <meta name="viewport" content="width=device-width, initial-scale=1"/> <meta name="description" content="Alex Dunn is a PhD student at UCSB"/> <meta name="author" content="Alex Dunn"/> <meta name="keywords" content="ucsb, philosophy"/> <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen"/> <link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print"/> <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--> <link href="http://alexdunn.info/handouts/index.xml/" rel="alternate" type="application/rss+xml" title="Handouts"/> </head> <body> <p class="assistive-text"><a href="#content-start">Skip to main content</a></p> <header class="page-header" role="banner"> <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1> <ul class="top"> <li class="top"><script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
-</li>
-<li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li>
-<li class="top after"><a href="/cv">CV</a></li>
-</ul>
-</header>
-
-
-<main id="content-start" role="main">
-
-<section class="single">
-<h2>All handouts</h2>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/moore">Skepticism and common sense</a></h3>
-</header>
-<p><p>Last week we talked about how one person&rsquo;s <em>modus ponens</em> is another&rsquo;s
-<em>modus tollens</em>.  If you&rsquo;re given any argument of the form</p>
-
-<ol>
-<li>If <em>P,</em> then <em>Q</em></li>
-<li><em>P</em></li>
-<li><em>Q</em></li>
-</ol>
-
-<p>there is another argument of the form</p>
-
-<ol>
-<li>If <em>P,</em> then <em>Q</em></li>
-<li>Not <em>Q</em></li>
-<li>Not <em>P</em></li>
-</ol>
-
-<p>Both arguments are valid.  Which of the two arguments is <em>sound</em> (if
-either are) depends on what <em>P</em> and <em>Q</em> are.</p>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/modus">One person&#8217;s <em>modus ponens</em> is another&#8217;s <em>modus tollens</em></a></h3>
-</header>
-<p><p>William Rowe pointed out that you can take his argument against the
-existence of God and basically reverse it:</p>
-
-<ol>
-<li><p>Unjustified evil exists (<em>premise</em>).</p></li>
-
-<li><p>If God existed, then no unjustified evil would exist (<em>premise</em>).</p></li>
-
-<li><p>Therefore, God does not exist (<em>follows from 1 and 2 by</em> modus tollens).</p></li>
-</ol>
-
-<p>To reverse this argument, we have to begin with different premises.
-Instead of assuming that unjustified evil exists, we assume that God
-exists:</p>
-
-<ol>
-<li><p>God exists (<em>premise</em>).</p></li>
-
-<li><p>If God exists, then no unjustified evil would exist (<em>premise</em>).</p></li>
-
-<li><p>Therefore, no unjustified evils exist (<em>follows from 1 and 2 by</em>
-modus ponens).</p></li>
-</ol>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/prometheus">The Prometheus Problem</a></h3>
-</header>
-<p><p>Here&rsquo;s Paley&rsquo;s argument, direct from Tim&rsquo;s slides:</p>
-
-<ol>
-<li><p>Watches have complex features the best explanation of which is that
-the watch was created by an intelligent designer for some purpose.</p></li>
-
-<li><p>Living organisms are similar to watches in these respects.</p></li>
-
-<li><p>Therefore, the best explanation of the complexities that we find in
-living organisms is that living organisms were created by an
-intelligent designer for some purpose.</p></li>
-</ol>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/locke">Is psychological continuity what matters for personal identity?</a></h3>
-</header>
-<p><p>If you accept the <em>Revised</em> Lockean Theory of personal identity, this
-is what you mean by &ldquo;psychological continuity&rdquo;:</p>
-
-<p>Psychological continuity
-:   Person-stages <em>A</em> and <em>B</em> are psychologically continuous just in
-    case (1) <em>A</em> and <em>B</em> have very similar mental &ldquo;profiles&rdquo;, and (2)
-    that similarity is due to a reliable causal connection.</p>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/dreaming">What’s the Dreaming Hypothesis, and why can’t we rule it out?</a></h3>
-</header>
-<p><p>The second premise of the <strong>Dream Argument</strong> is that “I am not in a
-position to eliminate (rule out) the Dreaming Hypothesis.”</p>
-
-<p>The <strong>Dreaming Hypothesis</strong> is just this: “perhaps you are now
-dreaming.”</p>
-
-<p>Why should we accept the second premise of the Dream Argument? What
-reasons are there to think that we’re <em>not</em> in a position to rule out
-the Dreaming Hypothesis?</p>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/identity">Persons and Person-stages</a></h3>
-</header>
-<p><blockquote>
-<p>Think of your life as a long story. Let the story be a rather
-narcissistic story: cut out all details about everything else except
-you. So the story begins with an infant (or perhaps a fetus). It
-describes the infant developing into a child and then an
-adolescent. The adolescent passes into young adulthood, then
-adulthood, middle age, and finally old age and death. Like all
-stories, this story has parts. We can distinguish the part of the
-story concerning childhood from the part concerning adulthood. Given
-enough details, there will be parts concerning individual days,
-minutes, or even instants.</p>
-</blockquote>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/zombies">Zombies!</a></h3>
-</header>
-<p><p>A zombie, in the philosophical sense, is something that&rsquo;s physically
-indistinguishable from a human but has no <em>mental states</em>.</p>
-
-<p>Other, maybe less precise ways of getting at this, would be to say
-that zombies are not <em>conscious</em>, or that there&rsquo;s <em>nothing going on up
-there.</em> (Of course there are lots of physical things going on up
-there, but no consciousness.)</p>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/god">The Trademark Argument for the Existence of God</a></h3>
-</header>
-<p><p>Descartes claims that &ldquo;there must be at least as much in the cause as
-in the effect of that cause.&rdquo;  His examples in the third <em>Meditation</em>
-include the following:</p>
-
-<ul>
-<li><p>&ldquo;A stone cannot begin to exist unless it is produced by something
-which contains everything to be found in the stone.&rdquo;</p></li>
-
-<li><p>&ldquo;Heat cannot be produced in an object except by something of at
-least the same degree or kind of perfection as heat.&rdquo;</p></li>
-</ul>
-</p>
-
-</article>
-
-	<article class="handouts" role="article">
-<header>
-<h3><a href="http://alexdunn.info/handouts/resources">UCSB Campus Resources</a></h3>
-</header>
-<p><p>College can be very stressful, especially for new and transferring students.
-Fortunately, UCSB has a number of resources to make your time here easier.</p>
-</p>
-
-</article>
-
-</section>
-
-</main>
-<footer class="page-footer" role="contentinfo">
-<p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> </li> <li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li> <li class="top after"><a href="/cv">CV</a></li> </ul> </header> <main id="content-start" role="main"> <section class="single"> <h2>All handouts</h2> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/moore/">Skepticism and common sense</a></h3> </header> <p><p>Last week we talked about how one person&rsquo;s <em>modus ponens</em> is another&rsquo;s <em>modus tollens</em>. If you&rsquo;re given any argument of the form</p> <ol> <li>If <em>P,</em> then <em>Q</em></li> <li><em>P</em></li> <li><em>Q</em></li> </ol> <p>there is another argument of the form</p> <ol> <li>If <em>P,</em> then <em>Q</em></li> <li>Not <em>Q</em></li> <li>Not <em>P</em></li> </ol> <p>Both arguments are valid. Which of the two arguments is <em>sound</em> (if either are) depends on what <em>P</em> and <em>Q</em> are.</p> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/modus/">One person&#8217;s <em>modus ponens</em> is another&#8217;s <em>modus tollens</em></a></h3> </header> <p><p>William Rowe pointed out that you can take his argument against the existence of God and basically reverse it:</p> <ol> <li><p>Unjustified evil exists (<em>premise</em>).</p></li> <li><p>If God existed, then no unjustified evil would exist (<em>premise</em>).</p></li> <li><p>Therefore, God does not exist (<em>follows from 1 and 2 by</em> modus tollens).</p></li> </ol> <p>To reverse this argument, we have to begin with different premises. Instead of assuming that unjustified evil exists, we assume that God exists:</p> <ol> <li><p>God exists (<em>premise</em>).</p></li> <li><p>If God exists, then no unjustified evil would exist (<em>premise</em>).</p></li> <li><p>Therefore, no unjustified evils exist (<em>follows from 1 and 2 by</em> modus ponens).</p></li> </ol> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/prometheus/">The Prometheus Problem</a></h3> </header> <p><p>Here&rsquo;s Paley&rsquo;s argument, direct from Tim&rsquo;s slides:</p> <ol> <li><p>Watches have complex features the best explanation of which is that the watch was created by an intelligent designer for some purpose.</p></li> <li><p>Living organisms are similar to watches in these respects.</p></li> <li><p>Therefore, the best explanation of the complexities that we find in living organisms is that living organisms were created by an intelligent designer for some purpose.</p></li> </ol> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/locke/">Is psychological continuity what matters for personal identity?</a></h3> </header> <p><p>If you accept the <em>Revised</em> Lockean Theory of personal identity, this is what you mean by &ldquo;psychological continuity&rdquo;:</p> <p>Psychological continuity : Person-stages <em>A</em> and <em>B</em> are psychologically continuous just in case (1) <em>A</em> and <em>B</em> have very similar mental &ldquo;profiles&rdquo;, and (2) that similarity is due to a reliable causal connection.</p> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/dreaming/">What’s the Dreaming Hypothesis, and why can’t we rule it out?</a></h3> </header> <p><p>The second premise of the <strong>Dream Argument</strong> is that “I am not in a position to eliminate (rule out) the Dreaming Hypothesis.”</p> <p>The <strong>Dreaming Hypothesis</strong> is just this: “perhaps you are now dreaming.”</p> <p>Why should we accept the second premise of the Dream Argument? What reasons are there to think that we’re <em>not</em> in a position to rule out the Dreaming Hypothesis?</p> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/identity/">Persons and Person-stages</a></h3> </header> <p><blockquote> <p>Think of your life as a long story. Let the story be a rather narcissistic story: cut out all details about everything else except you. So the story begins with an infant (or perhaps a fetus). It describes the infant developing into a child and then an adolescent. The adolescent passes into young adulthood, then adulthood, middle age, and finally old age and death. Like all stories, this story has parts. We can distinguish the part of the story concerning childhood from the part concerning adulthood. Given enough details, there will be parts concerning individual days, minutes, or even instants.</p> </blockquote> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/zombies/">Zombies!</a></h3> </header> <p><p>A zombie, in the philosophical sense, is something that&rsquo;s physically indistinguishable from a human but has no <em>mental states</em>.</p> <p>Other, maybe less precise ways of getting at this, would be to say that zombies are not <em>conscious</em>, or that there&rsquo;s <em>nothing going on up there.</em> (Of course there are lots of physical things going on up there, but no consciousness.)</p> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/god/">The Trademark Argument for the Existence of God</a></h3> </header> <p><p>Descartes claims that &ldquo;there must be at least as much in the cause as in the effect of that cause.&rdquo; His examples in the third <em>Meditation</em> include the following:</p> <ul> <li><p>&ldquo;A stone cannot begin to exist unless it is produced by something which contains everything to be found in the stone.&rdquo;</p></li> <li><p>&ldquo;Heat cannot be produced in an object except by something of at least the same degree or kind of perfection as heat.&rdquo;</p></li> </ul> </p> </article> <article class="handouts" role="article"> <header> <h3><a href="http://alexdunn.info/handouts/resources/">UCSB Campus Resources</a></h3> </header> <p><p>College can be very stressful, especially for new and transferring students. Fortunately, UCSB has a number of resources to make your time here easier.</p> </p> </article> </section> </main> <footer class="page-footer" role="contentinfo"> <p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p>
-</footer>
-
-</body>
-</html>
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p> </footer> </body> </html>
