--- a/index.html
+++ b/index.html
@@ -1,190 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Alex Dunn — alexdunn.info</title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="Alex Dunn is a PhD student at UCSB" />
-<meta name="author" content="Alex Dunn" />
-<meta name="keywords" content="ucsb, philosophy" />
-
-  	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
-	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-		
-	<link href="http://alexdunn.info/index.xml" rel="alternate" type="application/rss+xml" title="Alex Dunn" />
-
-</head>
-<body>
-
-
-<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
-
-<header class="page-header" role="banner">
-<h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
-<ul class="top">
-<li class="top"><script type="text/javascript">
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>Alex Dunn — alexdunn.info</title> <meta name="viewport" content="width=device-width, initial-scale=1"/> <meta name="description" content="Alex Dunn is a PhD student at UCSB"/> <meta name="author" content="Alex Dunn"/> <meta name="keywords" content="ucsb, philosophy"/> <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen"/> <link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print"/> <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--> <link href="http://alexdunn.info/index.xml/" rel="alternate" type="application/rss+xml" title="Alex Dunn"/> </head> <body> <p class="assistive-text"><a href="#content-start">Skip to main content</a></p> <header class="page-header" role="banner"> <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1> <ul class="top"> <li class="top"><script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
-</li>
-<li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li>
-<li class="top after"><a href="/cv">CV</a></li>
-</ul>
-</header>
-
-
-<main id="content-start" role="main">
-
-<section class="quicklinks">
-<div class="flex">
-<h2 class="resources"><a href="/handouts/resources">UCSB Campus Resources</a></h2>
-
-<h2>Course pages</h2>
-<ul class="courses-list">
-
-
-
-
-
-
-
-
-
-
-
-
-	<li>
-		S14
-		
-		<a href="http://alexdunn.info/courses/s14">Philosophy 1: Intro to Philosophy</a></li>
-
-
-
-
-
-	<li>
-		W14
-		
-		<a href="http://alexdunn.info/courses/w14">Philosophy 1: Intro to Philosophy</a></li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<li>
-		F13
-		
-		<a href="http://alexdunn.info/courses/f13">Philosophy 4: Intro to Ethics</a></li>
-
-
-
-
-</ul>
-</div>
-</section>
-
-<section class="primary">
-
-<article class="blurb">
-<h2 id="im-a-graduate-student-in-philosophy-at-ucsb">I’m a graduate student in Philosophy at UCSB</h2>
-<p>I study language and communication, and I’m particularly interested in proper names, semantic minimalism, and implicature. I wrote my <a href="/docs/thesis">undergraduate thesis</a> on the metaphysics of things and their parts, arguing that even if ordinary things like tables and chairs exist, they are very different than we might at first think.</p>
-</article>
-
-<article class="projects">
-<h2>Projects</h2>
-
-
-
-
-<h3 class="project-header"><a href="http://baruffio.com/t/philosophy/"><em>Harry Potter</em> and philosophy</a></h3>
-</header>
-<p>I wasn&rsquo;t invited to contribute to the &ldquo;Ultimate&rdquo; <a href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470398256.html"><em>Harry Potter</em> and Philosophy</a> book, but I&rsquo;ve written a few introductions to philosophical ideas (time travel, philosophy of names) using <em>Harry Potter</em> as a jumping-off point. Comments are always appreciated!</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<h3 class="project-header"><a href="/exists">Exists.js</a></h3>
-</header>
-<p>Exists.js is a silly tool to generate symbolic representations of existence statements, such as &ldquo;at least five things exist&rdquo;, &ldquo;exactly two things exist&rdquo;, and &ldquo;at most nine things exist&rdquo;.</p>
-
-<p>If you&rsquo;re a scumbag analytic philosopher like me then this might actually
-come in handy, like when your so-called &ldquo;friend&rdquo; suggests that chairs are
-ontologically innocent.</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<h3 class="project-header"><a href="/modernphil"><em>Modern Philosophy</em> in plain text</a></h3>
-</header>
-<p><em>Modern Philosophy</em> is a free textbook created by
-<a href="https://filebox.vt.edu/users/ottw/ott.htm" title="Walter Ott's
-personal site">Walter Ott</a>. It combines public-domain primary sources with
-supplementary material and study questions. Everything not in the
-public domain is licensed under
-<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons license page">CC BY-NC-SA 3.0</a>.</p>
-
-<p>This modified version of the text is written in
-<a href="http://daringfireball.net/projects/markdown/" title="Markdown
-project page">Markdown</a>. Markdown is a plain-text syntax that allows for easy
-conversion to other file formats.  Using
-<a href="http://johnmacfarlane.net/pandoc/" title="pandoc project page">pandoc</a>,
-<em>Modern Philosophy</em> can be easily converted to HTML, PDF, EPUB, and
-<a href="http://johnmacfarlane.net/pandoc/README.html#options" title="pandoc options">many other formats</a>.</p>
-
-
-
-</article>
-</section>
-</main>
-<footer class="page-footer" role="contentinfo">
-<p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> </li> <li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li> <li class="top after"><a href="/cv">CV</a></li> </ul> </header> <main id="content-start" role="main"> <section class="quicklinks"> <div class="flex"> <h2 class="resources"><a href="/handouts/resources">UCSB Campus Resources</a></h2> <h2>Course pages</h2> <ul class="courses-list"> <li> S14 <a href="http://alexdunn.info/courses/s14/">Philosophy 1: Intro to Philosophy</a></li> <li> W14 <a href="http://alexdunn.info/courses/w14/">Philosophy 1: Intro to Philosophy</a></li> <li> F13 <a href="http://alexdunn.info/courses/f13/">Philosophy 4: Intro to Ethics</a></li> </ul> </div> </section> <section class="primary"> <article class="blurb"> <h2 id="im-a-graduate-student-in-philosophy-at-ucsb">I’m a graduate student in Philosophy at UCSB</h2> <p>I study language and communication, and I’m particularly interested in proper names, semantic minimalism, and implicature. I wrote my <a href="/docs/thesis">undergraduate thesis</a> on the metaphysics of things and their parts, arguing that even if ordinary things like tables and chairs exist, they are very different than we might at first think.</p> </article> <article class="projects"> <h2>Projects</h2> <h3 class="project-header"><a href="http://baruffio.com/t/philosophy/"><em>Harry Potter</em> and philosophy</a></h3> </header> <p>I wasn&rsquo;t invited to contribute to the &ldquo;Ultimate&rdquo; <a href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470398256.html"><em>Harry Potter</em> and Philosophy</a> book, but I&rsquo;ve written a few introductions to philosophical ideas (time travel, philosophy of names) using <em>Harry Potter</em> as a jumping-off point. Comments are always appreciated!</p> <h3 class="project-header"><a href="/exists">Exists.js</a></h3> </header> <p>Exists.js is a silly tool to generate symbolic representations of existence statements, such as &ldquo;at least five things exist&rdquo;, &ldquo;exactly two things exist&rdquo;, and &ldquo;at most nine things exist&rdquo;.</p> <p>If you&rsquo;re a scumbag analytic philosopher like me then this might actually come in handy, like when your so-called &ldquo;friend&rdquo; suggests that chairs are ontologically innocent.</p> <h3 class="project-header"><a href="/modernphil"><em>Modern Philosophy</em> in plain text</a></h3> </header> <p><em>Modern Philosophy</em> is a free textbook created by <a href="https://filebox.vt.edu/users/ottw/ott.htm" title="Walter Ott's personal site">Walter Ott</a>. It combines public-domain primary sources with supplementary material and study questions. Everything not in the public domain is licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons license page">CC BY-NC-SA 3.0</a>.</p> <p>This modified version of the text is written in <a href="http://daringfireball.net/projects/markdown/" title="Markdown project page">Markdown</a>. Markdown is a plain-text syntax that allows for easy conversion to other file formats. Using <a href="http://johnmacfarlane.net/pandoc/" title="pandoc project page">pandoc</a>, <em>Modern Philosophy</em> can be easily converted to HTML, PDF, EPUB, and <a href="http://johnmacfarlane.net/pandoc/README.html#options" title="pandoc options">many other formats</a>.</p> </article> </section> </main> <footer class="page-footer" role="contentinfo"> <p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p>
-</footer>
-
-</body>
-</html>
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p> </footer> </body> </html>
