--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <![endif]-->
   <script src="//use.typekit.net/ehz8xjj.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <link rel="stylesheet" href="/stylesheets/resume.css">
+
+  <link rel="stylesheet" href="./stylesheets/screen.css">
 </head>
 <body>
 
@@ -21,9 +22,9 @@
 <section class="about">
 <p>I got my B.A. in Philosophy
 from <a href="http://academic.reed.edu/philosophy/">Reed College</a>
-in 2012, and now I’m a graduate student in the Philosophy department
-at the <a href="http://www.philosophy.ucsb.edu">University of
-California, Santa Barbara</a>.</p>
+in 2012, and my M.A. in Philosophy from
+the <a href="http://www.philosophy.ucsb.edu">University of California,
+Santa Barbara</a> in 2015.</p>
 </section>
 
 <section class="info contact">
@@ -111,7 +112,7 @@ texts from the Library Genesis database.</p>
 <section class="employment history">
 <h2 id="recent-employment">Recent employment</h2>
 
-<h3 id="philweb">Webmaster (<a href="http://www.philosophy.ucsb.edu">UCSB Department of Philosophy</a>), 2014–</h3>
+<h3 id="philweb">Webmaster (<a href="http://www.philosophy.ucsb.edu">UCSB Department of Philosophy</a>), July 2014–June 2015</h3>
 <p>During the Winter 2014 quarter I was the webmaster for the
 Department of Philosophy. In July 2014 I was appointed to the position
 again for a year-long term.</p>
@@ -134,7 +135,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 // -->
 </script><noscript>&#x73;&#112;&#x6f;&#x6f;&#110;&#x65;&#114;&#x6f;&#32;&#x61;&#116;&#32;&#104;&#102;&#x61;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>).</p>
 
-<h3 id="ucsb">Teaching Assistant (<a href="http://www.philosophy.ucsb.edu">UCSB Department of Philosophy</a>), 2013–</h3>
+<h3 id="ucsb">Teaching Assistant (<a href="http://www.philosophy.ucsb.edu">UCSB Department of Philosophy</a>), 2013–2015</h3>
 <p>Since September 2013 I have been a Teaching Assistant in Philosophy at the <a href="http://www.ucsb.edu">University of California, Santa Barbara</a>, leading sections for
 <ul>
 <li>Philosophy 1 (Introduction to Philosophy)</li>
