--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="//use.typekit.net/ehz8xjj.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 
-  <link rel="stylesheet" href="./stylesheets/screen.css">
+  <link rel="stylesheet" href="/stylesheets/screen.css">
 </head>
 <body>
 
