[adrl] recent employment

--- a/adrl/index.html
+++ b/adrl/index.html
@@ -63,6 +63,24 @@
     <section class="employment history">
       <h2 id="recent-employment">Recent employment</h2>
 
+      <h3 id="adrl">Web Programmer
+      (<a href="http://www.library.ucsb.edu">UCSB Library</a>),
+        September 2015–March 2016</h3>
+      <p>During the past sixth months I've been a developer in the
+      Library's IT department.  During that time I've accomplished the
+      following:</p>
+      <ul>
+        <li><p>Completed and launched the redesigned <a href="http://cylinders.library.ucsb.edu/">UCSB Cylinder Audio Archive</a>, begun by Nick Laviola.</p></li>
+        <li><p>Designed, developed and deployed an internal <a href="http://ark.library.ucsb.edu">ARK Minter</a> web application.</p></li>
+        <li>Assisted Digital Curation Experts in the development of the <a href="http://alexandria.ucsb.edu">Alexandria Digital Research Library</a> in all major areas:
+          <ul>
+            <li>Streamlined the provisioning and deployment processes</li>
+            <li>Wrote scripts for batch ETD ingests and interactive ingests from a remote machine.</li>
+            <li>Currently working on a major rewrite of the CSS.</li>
+            <li>Various other fixes and improvements to the Rails codebase.</li>
+        </ul></li>
+      </ul>
+
       <h3 id="philweb">Webmaster
       (<a href="http://www.philosophy.ucsb.edu">UCSB Department of
       Philosophy</a>), July 2014–June 2015</h3>
