[adrl] add capistrano

--- a/adrl/index.html
+++ b/adrl/index.html
@@ -53,8 +53,9 @@
       </ul>
       <h2>Tools</h2>
       <ul>
-        <li><p>Git</p></li>
         <li><p>Ansible</p></li>
+        <li><p>Capistrano</p></li>
+        <li><p>Git</p></li>
       </ul>
     </section>
 
